--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^10.0.0",
     "react": "^18.2.0",
     "react-currency-format": "^1.1.0",
